fix map on mobile devices

--- a/app/styles/_organizers.scss
+++ b/app/styles/_organizers.scss
@@ -1,4 +1,8 @@
 .organizers {
+	@media (max-width: $screen-md-max) {
+		text-align: center;
+	}
+
 	padding: 0 30px 0 30px;
 	.row {
 		margin-bottom: 20px;
