--- a/app/styles/_venue.scss
+++ b/app/styles/_venue.scss
@@ -4,4 +4,10 @@
 		font-weight: 600;
 		text-align: center;
 	}
+
+	@media (max-width: $screen-xs-max) {
+		.map {
+			height: 200px;
+		}
+	}
 }
